# Asisstent_mikasa

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FAQ.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  PANDUAN_GOOGLE_SHEETS.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  __init__.py  bot.py  config.py  docker-compose.yml  example.py  google_sheets.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  start.bat  start.sh  test_bot.py  tox.ini  tree.txt  utils.py
